# rearch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: publish.yml  sponsors.yml  test.yml
examples/: .gitignore
examples/axum/: .gitignore  Cargo.toml
examples/axum/src/: main.rs
examples/count-bench/: Cargo.toml
examples/count-bench/src/: main.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: main.rs
examples/large-list/: Cargo.toml
examples/large-list/src/: main.rs
examples/multithread-bench/: Cargo.toml
examples/override-capsules/: Cargo.toml
examples/override-capsules/src/: main.rs
examples/rearch-axum/: Cargo.toml
examples/rearch-axum/src/: main.rs
examples/simple-demo/: Cargo.toml
examples/simple-demo/src/: main.rs
rearch/: CHANGELOG.md  Cargo.toml
rearch-capsule-macro/: Cargo.toml
rearch-capsule-macro/src/: lib.rs
rearch-effects/: CHANGELOG.md  Cargo.toml
rearch-effects/src/: cloneable.rs  effect_lifetime_fixers.rs  lib.rs  multi.rs  overridable_capsule.rs  state_transformers.rs
rearch-macros/: CHANGELOG.md  Cargo.toml
rearch-macros/src/: lib.rs
rearch-tokio/: CHANGELOG.md  Cargo.toml
rearch-tokio/src/: lib.rs
rearch-ui/: Cargo.toml  README.md
rearch-ui/src/: lib.rs
rearch/src/: capsule_key.rs  capsule_reader.rs  gc.rs  lib.rs  read_capsules.rs  side_effect_registrar.rs  side_effects.rs  txn.rs
