[workspace]
members = ["rearch-capsule-macro", "rearch"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Re-imagined approach to application design and architecture"
repository = "https://github.com/GregoryConrad/rearch-rs"
keywords = ["design", "architecture", "reactive", "immutable", "dependency-injection"]
categories = ["caching", "concurrency"]
authors = ["Gregory Conrad <contact@gsconrad.com>"]

[workspace.dependencies]
rearch-capsule-macro = { path = "rearch-capsule-macro", version = "0.*" }
rearch = { path = "rearch", version = "0.*" }
