[workspace]
members = ["rearch", "rearch-*", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
description = "Re-imagined approach to application design and architecture"
homepage = "https://rearch.gsconrad.com"
documentation = "https://rearch.gsconrad.com"
repository = "https://github.com/GregoryConrad/rearch-rs"
keywords = ["design", "architecture", "reactive", "immutable", "dependency-injection"]
categories = ["caching", "concurrency"]
authors = ["Gregory Conrad <contact@gsconrad.com>"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
clone_on_ref_ptr = "warn"
unwrap_used = "warn"

# TODO(GregoryConrad): remove the following once the nightly false positive is resolved
# 1. https://github.com/rust-lang/rust-clippy/issues/12270
# 2. https://github.com/rust-lang/rust-clippy/pull/12827
lint_groups_priority = { level = "allow", priority = 1 }
