[package]
name = "rearch-effects"
version = "0.6.0"
documentation = "https://docs.rs/rearch-effects"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch = { version = "^0.10.2", path = "../rearch" }
