[package]
name = "rearch-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
