[package]
name = "rearch-macros"
version = "0.6.0"
documentation = "https://docs.rs/rearch-macros"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
