[package]
name = "rearch-tokio"
version = "0.10.0"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch = { workspace = true }
rearch-effects = { workspace = true }
tokio = { version = "1.36.0", default-features = false, features = ["rt"] }
