[package]
name = "rearch-tokio"
version = "0.10.1"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch = { version = "0.10.1", path = "../rearch" }
rearch-effects = { version = "0.5.1", path = "../rearch-effects" }
tokio = { version = "1.36.0", default-features = false, features = ["rt"] }
