[package]
name = "rearch"
version = "0.8.0"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch-macros = { workspace = true }
concread = { version = "0.4.*", default-features = false, features = ["maps"] }
paste = "1.*"
parking_lot = "0.12.*"
log = { version = "0.4.*", optional = true }

[features]
default = []

# Enable logging with `log`
logging = ["dep:log"]

# Enables the cleaner/better api, but unfortunately requires nightly
better-api = []
