[package]
name = "rearch"
version = "0.10.0"
rust-version = "1.75"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch-macros = { workspace = true }
concread = { version = "0.4.0", default-features = false, features = ["maps"] }
paste = "1.0.14"
parking_lot = "0.12.1"
log = { version = "0.4.21", optional = true }

[features]
default = []

# Enable logging with `log`
logging = ["dep:log"]

# *EXPERIMENTAL* Enables the cleaner/better api, but unfortunately requires nightly
experimental-api = []

# *EXPERIMENTAL* Enables ContainerReadTxn, ContainerWriteTxn, and associated methods
experimental-txn = []
