[package]
name = "example-axum"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rearch = { path = "../../rearch" }
axum = "0.7.5"
redb = "2.1.0"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
