[package]
name = "example-large-list"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
im = "15.1.0"
rearch = { workspace = true }
rearch-effects = { workspace = true }
